[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2018"

[dependencies]
bitvec = "0.19.6"
chrono = "0.4.38"
color-eyre = "0.5.11"
dirs = "3.0.2"
itertools = "0.9.0"
lazy_static = "1.5.0"
num = "0.3.1"
parse-display = "0.4.1"
path-absolutize = "3.1.1"
regex = "1.10.5"
reqwest = { version = "0.10.10", features = [ "blocking", "gzip", "cookies" ] }
serde = { version = "1.0.204", features = [ "derive" ] }
smallstr = "0.2.0"
structopt = "0.3.26"
thiserror = "1.0.63"
tinytemplate = "1.2.1"
toml = "0.5.11"
toml_edit = "0.2.1"

[workspace]
members = [
    "day01", "day02", "day03", "day04", "day05", "day06", "day07", "day08", "day09", "day10",
    "day11", "day12", "day13", "day14", "day15", "day16", "day17", "day18", "day19", "day20",
    "day21", "day22", "day23", "day24", "day25",
]
