[package]
name = "day04"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2018"

[dependencies]
aoc2020 = { path = ".." }
color-eyre = "0.5.8"
lazy_static = "1.4.0"
parse-display = "0.4.0"
regex = "1.4.2"
serde = { version = "1.0.117", optional = true, features = [ "derive" ] }
serde_json = { version = "1.0.60", optional = true }
structopt = "0.3.20"
thiserror = "1.0.22"

[features]
emit_json = [ "serde_json", "serde" ]
