[package]
name = "day04"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2018"

[dependencies]
aoc2020 = { path = ".." }
color-eyre = "0.5.11"
lazy_static = "1.5.0"
parse-display = "0.4.1"
regex = "1.10.5"
serde = { version = "1.0.204", optional = true, features = [ "derive" ] }
serde_json = { version = "1.0.120", optional = true }
structopt = "0.3.26"
thiserror = "1.0.63"

[features]
emit_json = [ "serde_json", "serde" ]
