[package]
name = "day18"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2018"

[dependencies]
aoc2020 = { path = ".." }
color-eyre = "0.5.8"
lalrpop-util = "0.19.1"
regex = "1.4.2"
structopt = "0.3.20"
thiserror = "1.0.22"

[build-dependencies]
lalrpop = { version = "0.19.1", features = [ "lexer" ] }
