[package]
name = "day18"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2018"

[dependencies]
aoc2020 = { path = ".." }
color-eyre = "0.5.11"
lalrpop-util = "0.19.12"
regex = "1.10.5"
structopt = "0.3.26"
thiserror = "1.0.63"

[build-dependencies]
lalrpop = { version = "0.19.12", features = [ "lexer" ] }
